--- a/main.css
+++ b/main.css
@@ -49,11 +49,13 @@ body {
 }
 
 #addons {
-  margin-left: 49.5%;
+  /* margin-left: 49.5%; */
+  /* border: 1px solid black; */
 }
 
 .addon {
-  width: 200px;
+  margin-left: 50%;
+  width: 50%;
   height: 90px;
   border-top-left-radius: 3px;
   border-bottom-left-radius: 3px;
@@ -65,8 +67,8 @@ body {
 }
 
 .addon:hover {
-  margin-left: -15px;
-  width: 215px;
+  margin-left: 47%;
+  width: 53%;
   cursor: pointer;
 }
 
